--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /_locales/messages.json
-    translation: /_locales/%locale%/messages.json
+    translation: /_locales/%two_letters_code%/messages.json
